2002-11-13  John Harper  <jsh@unfactored.org>

	Merged from HEAD:

	* windows.c (remove_window): only call focus_off_window () when
	not being called from the X error handler. Fixes #98405

2002-11-09  John Harper  <jsh@unfactored.org>

	* version 1.2

2002-11-03  John Harper  <jsh@unfactored.org>

	* merged color changes from HEAD:

	* sawmill.h (Lisp_Color): now contains alpha value

	* colors.c (Fget_color_rgb, Fget_color): both now take an extra
	ALPHA parameter
	(Fcolor_rgb, Fcolor_rgb_8): both now return an extra element in
	the list, the alpha value

	* fonts.c (xft_draw): use alpha field in color, instead of
	defaulting to fully opaque

	* images.c, functions.c, frames.c, cursors.c: updated callers

2002-11-02  John Harper  <jsh@unfactored.org>

	* merged font changes from HEAD:

	2002-11-02  John Harper  <jsh@unfactored.org>

	* fonts.c, sawmill.h: different font rendering methods are now
	better abstracted, using the Lisp_Font_Class structure

	(get-font-typed, font-type-exists-p, font-type): new functions,
	allows a font to be loaded from a type+name combination,
	instead of just a name, which may be ambiguous when multiple
	renderers are being used

	Current types are "xlfd" for traditional X fonts, and "Xft" for
	Xft client-side rendered fonts. The old get-font function
	always tries to load xlfd fonts, for backwards compatibility

	For now, Xft fonts can be used like this:

	(when (and (boundp 'font-type-exists-p)
		   (font-type-exists-p "Xft"))
	  (setq default-font (get-font-typed "Xft" "Trebuchet MS-11")))

	2002-11-02  John Harper  <jsh@unfactored.org>

	* fonts.c (x_draw_string): now takes an explicit foreground
	color parameter, instead of using the one in the gc

	* x.c, sawmill_subrs.h, functions.c, frames.c: updated callers

2002-10-20  John Harper  <jsh@unfactored.org>

	* more merging:

	2002-10-20  John Harper  <jsh@unfactored.org>

	* windows.c, sawmill_subrs.h, sawmill.h, events.c: removed code