@@ -1,3 +1,8 @@
+2002-12-24  John Harper  <jsh@unfactored.org>
+
+	* gtk-style.c (print_rc_style): removed code to print font
+	names, was protected by #if condition that fails for gtk 2.2
+
 2002-11-13  John Harper  <jsh@unfactored.org>
 
 	Merged from HEAD:
